# annkh

./: LICENSE  README.md  meson.build
example/: xor.c
notes/: evolve-strats-training-design.md  training.design.md
src/: boxmuller.c  boxmuller.h  environment.c  environment.h  errorc.c  errorc.h  layer.c  layer.h  mathutil.c  mathutil.h  net.c  net.h  pool.c  pool.h  poollist.c  poollist.h  rng.c  rng.h  softmax.c  softmax.h  trainer.c  trainer.h
src/environments/: e_classifier.c  e_classifier.h
src/train/: t_evstrat.c  t_evstrat.h  t_hebbian.c  t_hebbian.h
subprojects/: munit.wrap
tests/: net_layer.c  poolalloc.c
